# ESP32-HUB75-MatrixPanel-DMA

./: CMakeLists.txt  ESP32-HUB75-MatrixPanel-I2S-DMA.cpp  ESP32-HUB75-MatrixPanel-I2S-DMA.h  ESP32-HUB75-MatrixPanel-leddrivers.cpp  ESP32-RGB64x32MatrixPanel-I2S-DMA.cpp  ESP32-RGB64x32MatrixPanel-I2S-DMA.h  ESP32-RGB64x32MatrixPanel-I2S-DMA.ino  ESP32-VirtualMatrixPanel-I2S-DMA.h  FM6126A.md  Kconfig.projbuild  LICENSE.txt  Layer.cpp  Layer.h  Makefile  README.md  README.rst  SPLIT_MEMORY_MODE.md  anim.c  anim.h  esp32_I2sParallelDmaLedMatrix-row-based-refresh-16bitv2.ino  esp32_i2s_parallel.c  esp32_i2s_parallel.h  esp32_i2s_parallel_dma.c  esp32_i2s_parallel_dma.h  esp32_i2s_parallel_dma_cxxx.c  esp32_i2s_parallel_dma_cxxx.txt  esp32_i2s_parallel_mcu_def.h  esp32_i2s_parallel_v2.c  esp32_i2s_parallel_v2.h  fillrate.md  framebuffer_memory.md  keywords.txt  library.json  library.properties
.github/workflows/: .esp-idf_with-gfx.yml.swp  esp-idf-4.4.4_with-gfx.yml  esp-idf-4.4.5_with-gfx.yml  esp-idf-5.1.2_with-gfx.yml  esp-idf-5.1.2_without-gfx.yml  esp-idf-5.3.1_with-gfx.yml  esp-idf-5.3.1_without-gfx.yml  esp-idf-with-gfx.yml  esp-idf-without-gfx.yml  esp-idf_with-gfx.yml  esp-idf_without-gfx.yml  pio_arduino_build.yml  pio_arduino_build.yml.disabled  pio_build.yml
anim/: lenna.rgb  mkanimfile.sh  nyan_64x32-f00.rgb  nyan_64x32-f01.rgb  nyan_64x32-f02.rgb  nyan_64x32-f03.rgb  nyan_64x32-f04.rgb  nyan_64x32-f05.rgb  nyan_64x32-f06.rgb  nyan_64x32-f07.rgb  nyan_64x32-f08.rgb  nyan_64x32-f09.rgb  nyan_64x32-f10.rgb  nyan_64x32-f11.rgb
doc/: BuildOptions.md  Panel_Chaining_Types.ods  ScanRateGraphic.odp  VirtualMatrixPanel.odp  fillrate.md  i2s_memcalc.md  i2s_memcalc.xlsm  memcalc.md  memcalc.xlsm
examples/: README.md
examples/16x32_Panel/: main.cpp  readme.md
examples/1_SimpleTestShapes/: 1_SimpleTestShapes.ino
examples/2_PatternPlasma/: 2_PatternPlasma.ino  README.md
examples/32x16_1_4_ScanPanel/: 32x16_1_4_ScanPanel.ino  README.md
examples/3_DoubleBuffer/: 3_DoubleBuffer.ino
examples/3_FM6126Panel/: 3_FM6126Panel.ino  FM6126A.md  README.md
examples/4_HueValueSpectrumDemo/: 4_HueValueSpectrumDemo.ino
examples/4_OtherShiftDriverPanel/: 4_OtherShiftDriverPanel.ino  README.md
examples/AnimatedGIF/: AnimatedGIF.ino  FSBrowser.h  FilenameFunctions.cpp  FilenameFunctions.h  GifDecoder.h  GifDecoder_Impl.h  LICENSE.txt  LzwDecoder_Impl.h
examples/AnimatedGIFPanel/: AnimatedGIFPanel.ino  README.md
examples/AnimatedGIFPanel_LittleFS/: AnimatedGIFPanel_LittleFS.ino  README.md
examples/AnimatedGIFPanel_SD/: AnimatedGIFPanel_SD.ino  Readme.md  gif_functions.hpp  sdcard_functions.hpp
examples/AnimatedGIFPanel_SPIFFS/: AnimatedGIFPanel_SPIFFS.ino
examples/AuroraDemo/: Attractor.h  Attractor.hpp  AuroraDemo.ino  Boid.h  Boid.hpp  Drawable.h  Effects.h  EffectsLayer.hpp  PatternAttract.h  PatternAttract.hpp  PatternBounce.h  PatternBounce.hpp  PatternCube.h  PatternCube.hpp  PatternElectricMandala.h  PatternFire.h  PatternFireKoz.hpp  PatternFireworks.hpp  PatternFlock.h  PatternFlock.hpp  PatternFlowField.h  PatternFlowField.hpp  PatternGreenScroll.hpp  PatternIncrementalDrift.h  PatternIncrementalDrift.hpp  PatternIncrementalDrift2.h  PatternIncrementalDrift2.hpp  PatternInfinity.h  PatternInfinity.hpp  PatternInvaders.h  PatternJuliaSetFractal.hpp  PatternLife.h  PatternMaze.h  PatternMaze.hpp  PatternMunch.h  PatternNoiseSmearing.h  PatternNoiseSmearing.hpp  PatternPendulumWave.h  PatternPendulumWave.hpp  PatternPlasma.h  (+26 more)
examples/BitmapIcons/: BitmapIcons.ino  Dhole_weather_icons32px.h  README.md  bmp2hex.py
examples/BouncingSquares/: BouncingSquares.ino
examples/BufferSwap/: BufferSwap.ino
examples/Buffer_Swap_Test/: Buffer_Swap_Test.ino
examples/ChainedPanels/: ChainedPanels.ino  ChainedPanels.odp  README.md  VirtualMatrixPanel.odp
examples/ChainedPanelsAuroraDemo/: Attractor.h  ChainedPanelsAuroraDemo.ino  Drawable.h  Effects.h  Geometry.h  PaletteFireKoz.h  PatternAttract.h  PatternElectricMandala.h  PatternFire.h  PatternFireKoz.h  PatternFlowField.h  PatternIncrementalDrift.h  PatternInfinity.h  PatternInvaders.h  PatternMaze.h  PatternMunch.h  PatternNoiseSmearing.h  PatternPendulumWave.h  PatternPlasma.h  PatternRadar.h  PatternSimplexNoise.h  PatternSnake.h  PatternSpark.h  PatternSpin.h  PatternSpiral.h  PatternSpiro.h  PatternSwirl.h  PatternWave.h  Patterns.h  Vector.h
examples/ChainedPanelsScreenBuffer/: ChainedPanelsScreenBuffer.ino  FastLED_Pixel_Buffer.cpp  FastLED_Pixel_Buffer.h
examples/DoubleBufferSwap/: DoubleBufferSwap.ino
examples/FM6126Panel/: FM6126Panel.ino
examples/Four_Scan_Panel/: Four_Scan_Panel.ino  README.md
examples/Glediator3_TPM2_MatrixPanel/: Glediator3_TPM2_MatrixPanel.ino  README.md
examples/GraphicsLayer/: GraphicsLayer.ino  Layer.cpp  Layer.h  README.md
examples/HueValueSpectrum/: HueValueSpectrum.ino
examples/Julia_Set_Demo/: Julia_Set_Demo.ino
examples/One_Eight_1_8_ScanPanel/: 1_8_ScanPanel.h  One_Eight_1_8_ScanPanel.ino  README.md
examples/One_Eighth_1_8_ScanPanel/: OneEighthScanMatrixPanel.h  One_Eighth_1_8_ScanPanel.ino  README.md
examples/One_Quarter_1_4_ScanPanel/: OneQuarterScanMatrixPanel.h  One_Quarter_1_4_ScanPanel.ino  README.md
examples/P6_32x16_1_4_ScanPanel/: P6_32x16_1_4_ScanPanel.ino  QuarterScanMatrixPanel.h  README.md
examples/PIO_TestPatterns/: README.md  platformio.ini  sdkconfig.defaults
examples/PanelGFXDemo/: PanelGFXDemo.ino  smileytongue24.h
examples/PatternPlasma/: PatternPlasma.ino
examples/Pixel_Mapping_Test/: Pixel_Mapping_Test.ino  README.md
examples/ScrollingTextLayer/: ScrollingTextLayer.ino
examples/SmoothDoubleBuffer/: SmoothDoubleBuffer.ino
src/: ESP32-HUB75-MatrixPanel-I2S-DMA.cpp  ESP32-HUB75-MatrixPanel-I2S-DMA.h  ESP32-HUB75-MatrixPanel-leddrivers.cpp  ESP32-HUB75-VirtualMatrixPanel_T.hpp  ESP32-VirtualMatrixPanel-I2S-DMA.h  ESP32-VirtualMatrixPanel-I2S-DMA.h-old  HUB75-VirtualMatrixPanelT.hpp  cie_luts.h
testing/: README.md  baseline.hpp  four_scan_40_80px_hfarcan.cpp  virtual.cpp
tools/: generate_cie_luts.py
(+18 files in other folders)
